--- a/footer.html
+++ b/footer.html
@@ -4,7 +4,7 @@
         <title>TODO supply a title</title>
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="./estilo.css" rel="stylesheet" type="text/css">
+        <link href="css/estilo.css" rel="stylesheet" type="text/css">
     </head>
     <body style="background-color: none; font-family: sans-serif;">
         <div style="text-align: center; color: blue; cursor: default;">            
