--- a/titulo_frame.html
+++ b/titulo_frame.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0060)https://ipagos.chihuahua.gob.mx/VerificaTC/titulo_frame.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-        <title>Verificación de la Tarjeta de Circulación</title>
+        <title>VerificaciÃ³n de la Tarjeta de CirculaciÃ³n</title>
         
         <!--link rel="STYLESHEET" type="text/css" href="css/estilos.css"-->
         <script type="text/javascript">
@@ -22,7 +22,7 @@
         <table class="tabla1" align="center">
             <tbody><tr>
                 <td>
-                    <img src="./bannerVerificaTC.gif">
+                    <img src="images/bannerVerificaTC.gif">
                 </td>
             </tr>
         </tbody></table>
