--- a/consultaTC.html
+++ b/consultaTC.html
@@ -1,42 +1,24 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>JSP Page</title>
-  <script>
-    console.log("muestra datos 1");
-    console.log("muestra datos 2");
-    function cerrarVentana() {
-      window.close();
-    }
-  </script>
-</head>
 <body>
-
-  <!-- Replicated Header from titulo_frame.html -->
   <div align="center">
     <table width="1024" border="0" cellspacing="0" cellpadding="0">
       <tr>
         <td colspan="3">
-          <img src="images/bannerVerificaTC.gif" width="1024" height="115" alt="Secretaría de Hacienda">
+          <img src="images/bannerVerificaTC.gif" width="1024" height="115" alt="SecretarÃ­a de Hacienda">
         </td>
       </tr>
       <tr>
         <td colspan="3">
-          <img src="images/DivisionBlanco.png" width="1024" height="10" alt="División Blanca">
+          <img src="images/DivisionBlanco.png" width="1024" height="10" alt="SecretarÃ­a de Hacienda">
         </td>
       </tr>
       <tr>
         <td colspan="3">
-          <img src="images/DivisionColor.png" width="1079" height="15" alt="División Color">
+          <img src="images/DivisionColor.png" width="1079" height="15" alt="SecretarÃ­a de Hacienda">
         </td>
       </tr>
     </table>
   </div>
 
-  <br>
-
-  <!-- Existing Vehicle Data Section -->
   <div align="center" id="divDescripcion">
     <table align="center">
       <thead>
@@ -45,24 +27,18 @@
         </tr>
       </thead>
       <tbody>
-        <tr><td align="right">RFC:</td><td>&nbsp;</td><td>AAFC720116HN2</td></tr>
-        <tr><td align="right">PROPIETARIO:</td><td>&nbsp;</td><td>ALVAREZ FLORES CARMEN MARCELA</td></tr>
-        <tr><td align="right">PLACA:</td><td>&nbsp;</td><td>EKP165B</td></tr>
-        <tr><td align="right">NÚMERO DE SERIE:</td><td>&nbsp;</td><td>JN8AS5MV8CW378588</td></tr>
-        <tr><td align="right">MARCA:</td><td>&nbsp;</td><td>NISSAN</td></tr>
-        <tr><td align="right">LÍNEA:</td><td>&nbsp;</td><td>ROGUE</td></tr>
-        <tr><td align="right">MODELO:</td><td>&nbsp;</td><td>2012</td></tr>
-        <tr><td align="right">COLOR:</td><td>&nbsp;</td><td>BLANCO</td></tr>
-        <tr><td align="right">ORIGEN:</td><td>&nbsp;</td><td>EXTRANJERO</td></tr>
-        <tr><td align="right">REPUVE:</td><td>&nbsp;</td><td>T76AV7DF</td></tr>
-        <tr><td align="right">VIGENCIA:</td><td>&nbsp;</td><td>2024</td></tr>
+        <tr><td align="right"><p>RFC:</p></td><td>&nbsp;</td><td><p>AAFC720116HN2</p></td></tr>
+        <tr><td align="right"><p>PROPIETARIO:</p></td><td>&nbsp;</td><td><p>ALVAREZ FLORES CARMEN MARCELA</p></td></tr>
+        <tr><td align="right"><p>PLACA:</p></td><td>&nbsp;</td><td><p>EKP165B</p></td></tr>
+        <tr><td align="right"><p>NÚMERO DE SERIE:</p></td><td>&nbsp;</td><td><p>JN8AS5MV8CW378588</p></td></tr>
+        <tr><td align="right"><p>MARCA:</p></td><td>&nbsp;</td><td><p>NISSAN</p></td></tr>
+        <tr><td align="right"><p>LÍNEA:</p></td><td>&nbsp;</td><td><p>ROGUE</p></td></tr>
+        <tr><td align="right"><p>MODELO:</p></td><td>&nbsp;</td><td><p>2012</p></td></tr>
+        <tr><td align="right"><p>COLOR:</p></td><td>&nbsp;</td><td><p>BLANCO</p></td></tr>
+        <tr><td align="right"><p>ORIGEN:</p></td><td>&nbsp;</td><td><p>EXTRANJERO</p></td></tr>
+        <tr><td align="right"><p>REPUVE:</p></td><td>&nbsp;</td><td><p>T76AV7DF</p></td></tr>
+        <tr><td align="right"><p>VIGENCIA:</p></td><td>&nbsp;</td><td><p>2024</p></td></tr>
       </tbody>
     </table>
   </div>
-
-  <script>
-    console.log("muestra datos 3");
-  </script>
-
 </body>
-</html>
