--- a/consultaTC.html
+++ b/consultaTC.html
@@ -2,17 +2,17 @@
   <table width="1024" border="0" cellspacing="0" cellpadding="0">
     <tr>
       <td colspan="3">
-        <img src="images/bannerVerificaTC.gif" width="1024" height="115" alt="SecretarÃ­a de Hacienda" style="display:block;">
+        <img src="images/bannerVerificaTC.gif" width="1024" height="115" alt="Secretaría de Hacienda">
       </td>
     </tr>
     <tr>
       <td colspan="3">
-        <img src="images/DivisionBlanco.png" width="1024" height="10" alt="SecretarÃ­a de Hacienda" style="display:block;">
+        <img src="images/DivisionBlanco.png" width="1024" height="10" alt="División Blanca">
       </td>
     </tr>
     <tr>
       <td colspan="3">
-        <img src="images/DivisionColor.png" width="1079" height="15" alt="SecretarÃ­a de Hacienda" style="display:block;">
+        <img src="images/DivisionColor.png" width="1079" height="15" alt="División Color">
       </td>
     </tr>
   </table>
