--- a/consultaTC.html
+++ b/consultaTC.html
@@ -1,42 +1,24 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>JSP Page</title>
-  <script>
-    console.log("muestra datos 1");
-    console.log("muestra datos 2");
-    function cerrarVentana() {
-      window.close();
-    }
-  </script>
-</head>
 <body>
-
-  <!-- Header Section -->
   <div align="center">
     <table width="1024" border="0" cellspacing="0" cellpadding="0">
       <tr>
         <td colspan="3">
-          <img src="images/bannerVerificaTC.gif" width="1024" height="115" alt="Secretaría de Hacienda">
+          <img src="images/bannerVerificaTC.gif" width="1024" height="115" alt="SecretarÃ­a de Hacienda">
         </td>
       </tr>
       <tr>
         <td colspan="3">
-          <img src="images/DivisionBlanco.png" width="1024" height="10" alt="División Blanca">
+          <img src="images/DivisionBlanco.png" width="1024" height="10" alt="SecretarÃ­a de Hacienda">
         </td>
       </tr>
       <tr>
         <td colspan="3">
-          <img src="images/DivisionColor.png" width="1079" height="15" alt="División Color">
+          <img src="images/DivisionColor.png" width="1079" height="15" alt="SecretarÃ­a de Hacienda">
         </td>
       </tr>
     </table>
   </div>
 
-  <br>
-
-  <!-- Vehicle Data Section -->
   <div align="center" id="divDescripcion">
     <table align="center">
       <thead>
@@ -59,10 +41,4 @@
       </tbody>
     </table>
   </div>
-
-  <script>
-    console.log("muestra datos 3");
-  </script>
-
 </body>
-</html>
