--- a/consultaTC.html
+++ b/consultaTC.html
@@ -1,44 +1,19 @@
-<body>
-  <div align="center">
-    <table width="1024" border="0" cellspacing="0" cellpadding="0">
-      <tr>
-        <td colspan="3">
-          <img src="images/bannerVerificaTC.gif" width="1024" height="115" alt="SecretarÃ­a de Hacienda">
-        </td>
-      </tr>
-      <tr>
-        <td colspan="3">
-          <img src="images/DivisionBlanco.png" width="1024" height="10" alt="SecretarÃ­a de Hacienda">
-        </td>
-      </tr>
-      <tr>
-        <td colspan="3">
-          <img src="images/DivisionColor.png" width="1079" height="15" alt="SecretarÃ­a de Hacienda">
-        </td>
-      </tr>
-    </table>
-  </div>
-
-  <div align="center" id="divDescripcion">
-    <table align="center">
-      <thead>
-        <tr>
-          <th align="center" colspan="3"><h1>DATOS DEL VEHÍCULO</h1></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr><td align="right"><p>RFC:</p></td><td>&nbsp;</td><td><p>AAFC720116HN2</p></td></tr>
-        <tr><td align="right"><p>PROPIETARIO:</p></td><td>&nbsp;</td><td><p>ALVAREZ FLORES CARMEN MARCELA</p></td></tr>
-        <tr><td align="right"><p>PLACA:</p></td><td>&nbsp;</td><td><p>EKP165B</p></td></tr>
-        <tr><td align="right"><p>NÚMERO DE SERIE:</p></td><td>&nbsp;</td><td><p>JN8AS5MV8CW378588</p></td></tr>
-        <tr><td align="right"><p>MARCA:</p></td><td>&nbsp;</td><td><p>NISSAN</p></td></tr>
-        <tr><td align="right"><p>LÍNEA:</p></td><td>&nbsp;</td><td><p>ROGUE</p></td></tr>
-        <tr><td align="right"><p>MODELO:</p></td><td>&nbsp;</td><td><p>2012</p></td></tr>
-        <tr><td align="right"><p>COLOR:</p></td><td>&nbsp;</td><td><p>BLANCO</p></td></tr>
-        <tr><td align="right"><p>ORIGEN:</p></td><td>&nbsp;</td><td><p>EXTRANJERO</p></td></tr>
-        <tr><td align="right"><p>REPUVE:</p></td><td>&nbsp;</td><td><p>T76AV7DF</p></td></tr>
-        <tr><td align="right"><p>VIGENCIA:</p></td><td>&nbsp;</td><td><p>2024</p></td></tr>
-      </tbody>
-    </table>
-  </div>
-</body>
+<div align="center">
+  <table width="1024" border="0" cellspacing="0" cellpadding="0">
+    <tr>
+      <td colspan="3">
+        <img src="images/bannerVerificaTC.gif" width="1024" height="115" alt="SecretarÃ­a de Hacienda" style="display:block;">
+      </td>
+    </tr>
+    <tr>
+      <td colspan="3">
+        <img src="images/DivisionBlanco.png" width="1024" height="10" alt="SecretarÃ­a de Hacienda" style="display:block;">
+      </td>
+    </tr>
+    <tr>
+      <td colspan="3">
+        <img src="images/DivisionColor.png" width="1079" height="15" alt="SecretarÃ­a de Hacienda" style="display:block;">
+      </td>
+    </tr>
+  </table>
+</div>
