--- a/consultaTC.html
+++ b/consultaTC.html
@@ -1,10 +1,10 @@
 <body>
   <div style="text-align: center;">
-    <img src="images/bannerVerificaTC.gif" alt="SecretarÃ­a de Hacienda">
+    <img src="images/bannerVerificaTC.gif" alt="Secretaría de Hacienda" width="980" height="120">
     <br>
-    <img src="images/DivisionBlanco.png" alt="SecretarÃ­a de Hacienda">
+    <img src="images/DivisionBlanco.png" alt="División Blanco" width="980" height="10">
     <br>
-    <img src="images/DivisionColor.png" alt="SecretarÃ­a de Hacienda">
+    <img src="images/DivisionColor.png" alt="División Color" width="980" height="10">
   </div>
 
   <div align="center" id="divDescripcion">
