--- a/consultaTC.html
+++ b/consultaTC.html
@@ -3,9 +3,10 @@
     <img src="images/bannerVerificaTC.gif" alt="Secretaría de Hacienda" width="980" height="120">
     <br>
     <img src="images/DivisionBlanco.png" alt="División Blanco" width="980" height="10">
-    <br><br>
-    <img src="images/DivisionColor.png" alt="División Color" width="980" height="10">
-    <br><br>
+    
+    <div style="margin-top: 8px; margin-bottom: 12px;">
+      <img src="images/DivisionColor.png" alt="División Color" width="980" height="10">
+    </div>
   </div>
 
   <div align="center" id="divDescripcion">
@@ -22,4 +23,12 @@
         <tr><td align="right"><p>NÚMERO DE SERIE:</p></td><td>&nbsp;</td><td><p>JN8AS5MV8CW378588</p></td></tr>
         <tr><td align="right"><p>MARCA:</p></td><td>&nbsp;</td><td><p>NISSAN</p></td></tr>
         <tr><td align="right"><p>LÍNEA:</p></td><td>&nbsp;</td><td><p>ROGUE</p></td></tr>
-        <tr><td align="right"><p>MODELO:</p></td><td>&nbsp;</td><td><p>2012</p></td>
+        <tr><td align="right"><p>MODELO:</p></td><td>&nbsp;</td><td><p>2012</p></td></tr>
+        <tr><td align="right"><p>COLOR:</p></td><td>&nbsp;</td><td><p>BLANCO</p></td></tr>
+        <tr><td align="right"><p>ORIGEN:</p></td><td>&nbsp;</td><td><p>EXTRANJERO</p></td></tr>
+        <tr><td align="right"><p>REPUVE:</p></td><td>&nbsp;</td><td><p>T76AV7DF</p></td></tr>
+        <tr><td align="right"><p>VIGENCIA:</p></td><td>&nbsp;</td><td><p>2024</p></td></tr>
+      </tbody>
+    </table>
+  </div>
+</body>
