--- a/consultaTC.html
+++ b/consultaTC.html
@@ -31,7 +31,7 @@
     }
 
     .content {
-      padding-top: 130px; /* Push content below fixed header */
+      padding-top: 130px;
     }
 
     .table-container {
@@ -61,13 +61,15 @@
       line-height: 2.2;
     }
 
-    td:first-child {
+    .label {
       text-align: right;
       white-space: nowrap;
+      width: 30%;
     }
 
-    td:last-child {
+    .value {
       text-align: left;
+      width: 70%;
     }
   </style>
 </head>
@@ -89,24 +91,18 @@
       <table>
         <thead>
           <tr>
-            <th colspan="3">DATOS DEL VEHÍCULO</th>
+            <th colspan="2">DATOS DEL VEHÍCULO</th>
           </tr>
         </thead>
         <tbody>
-          <tr><td><p>RFC:</p></td><td>&nbsp;</td><td><p>AAFC720116HN2</p></td></tr>
-          <tr><td><p>PROPIETARIO:</p></td><td>&nbsp;</td><td><p>ALVAREZ FLORES CARMEN MARCELA</p></td></tr>
-          <tr><td><p>PLACA:</p></td><td>&nbsp;</td><td><p>EKP165B</p></td></tr>
-          <tr><td><p>NÚMERO DE SERIE:</p></td><td>&nbsp;</td><td><p>JN8AS5MV8CW378588</p></td></tr>
-          <tr><td><p>MARCA:</p></td><td>&nbsp;</td><td><p>NISSAN</p></td></tr>
-          <tr><td><p>LÍNEA:</p></td><td>&nbsp;</td><td><p>ROGUE</p></td></tr>
-          <tr><td><p>MODELO:</p></td><td>&nbsp;</td><td><p>2012</p></td></tr>
-          <tr><td><p>COLOR:</p></td><td>&nbsp;</td><td><p>BLANCO</p></td></tr>
-          <tr><td><p>ORIGEN:</p></td><td>&nbsp;</td><td><p>EXTRANJERO</p></td></tr>
-          <tr><td><p>REPUVE:</p></td><td>&nbsp;</td><td><p>T76AV7DF</p></td></tr>
-          <tr><td><p>VIGENCIA:</p></td><td>&nbsp;</td><td><p>2024</p></td></tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-</body>
-</html>
+          <tr><td class="label"><p>RFC:</p></td><td class="value"><p>AAFC720116HN2</p></td></tr>
+          <tr><td class="label"><p>PROPIETARIO:</p></td><td class="value"><p>ALVAREZ FLORES CARMEN MARCELA</p></td></tr>
+          <tr><td class="label"><p>PLACA:</p></td><td class="value"><p>EKP165B</p></td></tr>
+          <tr><td class="label"><p>NÚMERO DE SERIE:</p></td><td class="value"><p>JN8AS5MV8CW378588</p></td></tr>
+          <tr><td class="label"><p>MARCA:</p></td><td class="value"><p>NISSAN</p></td></tr>
+          <tr><td class="label"><p>LÍNEA:</p></td><td class="value"><p>ROGUE</p></td></tr>
+          <tr><td class="label"><p>MODELO:</p></td><td class="value"><p>2012</p></td></tr>
+          <tr><td class="label"><p>COLOR:</p></td><td class="value"><p>BLANCO</p></td></tr>
+          <tr><td class="label"><p>ORIGEN:</p></td><td class="value"><p>EXTRANJERO</p></td></tr>
+          <tr><td class="label"><p>REPUVE:</p></td><td class="value"><p>T76AV7DF</p></td></tr>
+          <tr><td class="label">
