--- a/consultaTC.html
+++ b/consultaTC.html
@@ -1,109 +1,12 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Verificación de la Tarjeta de Circulación</title>
-  <style>
-    body {
-      margin: 0;
-      background-color: #ffffff;
-      font-family: serif;
-    }
+<!-- Spacer to push content below fixed header -->
+<div style="margin-top:160px;"></div>
 
-    .header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      background-color: #ffffff;
-      z-index: 1000;
-      padding-top: 10px;
-    }
-
-    .banner-container {
-      width: 567px;
-      margin: 0 auto;
-      text-align: center;
-    }
-
-    .divider {
-      margin: 4px 0;
-    }
-
-    .content {
-      padding-top: 130px; /* Push below fixed header */
-      width: 980px;
-      margin: 0 auto;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-    }
-
-    th {
-      font-size: 1.2em;
-      font-weight: bold;
-      text-align: center;
-      padding-bottom: 10px;
-    }
-
-    td {
-      padding: 6px 8px;
-      vertical-align: top;
-    }
-
-    td p {
-      margin: 0;
-      line-height: 2.4; /* Matches original scroll spacing */
-    }
-
-    .label {
-      text-align: right;
-      white-space: nowrap;
-      width: 35%;
-    }
-
-    .value {
-      text-align: left;
-      width: 65%;
-    }
-  </style>
-</head>
-<body>
-  <div class="header">
-    <div class="banner-container">
-      <img src="images/bannerVerificaTC.gif" alt="Secretaría de Hacienda" width="567" height="88">
-      <div class="divider">
-        <img src="images/DivisionBlanco.png" alt="División Blanco" width="567" height="10">
-      </div>
-      <div class="divider">
-        <img src="images/DivisionColor.png" alt="División Color" width="567" height="10">
-      </div>
-    </div>
-  </div>
-
-  <div class="content">
-    <table>
-      <thead>
-        <tr>
-          <th colspan="2">DATOS DEL VEHÍCULO</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr><td class="label"><p>RFC:</p></td><td class="value"><p>AAFC720116HN2</p></td></tr>
-        <tr><td class="label"><p>PROPIETARIO:</p></td><td class="value"><p>ALVAREZ FLORES CARMEN MARCELA</p></td></tr>
-        <tr><td class="label"><p>PLACA:</p></td><td class="value"><p>EKP165B</p></td></tr>
-        <tr><td class="label"><p>NÚMERO DE SERIE:</p></td><td class="value"><p>JN8AS5MV8CW378588</p></td></tr>
-        <tr><td class="label"><p>MARCA:</p></td><td class="value"><p>NISSAN</p></td></tr>
-        <tr><td class="label"><p>LÍNEA:</p></td><td class="value"><p>ROGUE</p></td></tr>
-        <tr><td class="label"><p>MODELO:</p></td><td class="value"><p>2012</p></td></tr>
-        <tr><td class="label"><p>COLOR:</p></td><td class="value"><p>BLANCO</p></td></tr>
-        <tr><td class="label"><p>ORIGEN:</p></td><td class="value"><p>EXTRANJERO</p></td></tr>
-        <tr><td class="label"><p>REPUVE:</p></td><td class="value"><p>T76AV7DF</p></td></tr>
-        <tr><td class="label"><p>VIGENCIA:</p></td><td class="value"><p>2024</p></td></tr>
-      </tbody>
-    </table>
-  </div>
-</body>
-</html>
+<!-- Content block -->
+<table width="100%" cellpadding="0" cellspacing="0" border="0">
+  <tr>
+    <td align="center">
+      <font face="Arial" size="4"><b>DATOS DEL VEHÍCULO</b></font>
+    </td>
+  </tr>
+  <!-- Original content continues here -->
+</table>
