--- a/consultaTC.html
+++ b/consultaTC.html
@@ -1,12 +1,93 @@
-<!-- Spacer to push content below fixed header -->
-<div style="margin-top:160px;"></div>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Consulta de Vehículo</title>
+  <style>
+    body {
+      margin: 0;
+      background-color: #ffffff;
+      font-family: Arial, sans-serif;
+    }
 
-<!-- Content block -->
-<table width="100%" cellpadding="0" cellspacing="0" border="0">
-  <tr>
-    <td align="center">
-      <font face="Arial" size="4"><b>DATOS DEL VEHÍCULO</b></font>
-    </td>
-  </tr>
-  <!-- Original content continues here -->
-</table>
+    .banner {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      z-index: 1000;
+      background-color: #ffffff;
+    }
+
+    .banner img {
+      display: block;
+      width: 100%;
+      height: 88px;
+    }
+
+    .DivisionBlanco {
+      height: 10px;
+      background-color: #ffffff;
+    }
+
+    .DivisionColor {
+      height: 10px;
+      background-color: #003366;
+    }
+
+    .content {
+      margin-top: 160px; /* Pushes content below fixed banner */
+      padding: 0 20px;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    td {
+      padding: 5px;
+      font-size: 14px;
+    }
+
+    .section-title {
+      font-size: 18px;
+      font-weight: bold;
+      text-align: center;
+      padding: 10px 0;
+    }
+  </style>
+</head>
+<body>
+  <div class="banner">
+    <img src="banner.gif" alt="Banner animado">
+    <div class="DivisionBlanco"></div>
+    <div class="DivisionColor"></div>
+  </div>
+
+  <div class="content">
+    <table>
+      <tr>
+        <td colspan="2" class="section-title">DATOS DEL VEHÍCULO</td>
+      </tr>
+      <tr>
+        <td><b>Placa:</b></td>
+        <td>ABC123</td>
+      </tr>
+      <tr>
+        <td><b>Marca:</b></td>
+        <td>Ford</td>
+      </tr>
+      <tr>
+        <td><b>Modelo:</b></td>
+        <td>2008</td>
+      </tr>
+      <tr>
+        <td><b>Color:</b></td>
+        <td>Rojo</td>
+      </tr>
+      <!-- Add more rows as needed -->
+    </table>
+  </div>
+</body>
+</html>
