--- a/consultaTC.html
+++ b/consultaTC.html
@@ -37,7 +37,8 @@
     }
 
     table {
-      width: 100%;
+      width: 70%;
+      margin: 0 auto;
       border-collapse: collapse;
     }
 
@@ -61,12 +62,12 @@
     .label {
       text-align: right;
       white-space: nowrap;
-      width: 35%;
+      width: 30%;
     }
 
     .value {
       text-align: left;
-      width: 65%;
+      width: 70%;
     }
   </style>
 </head>
