--- a/consultaTC.html
+++ b/consultaTC.html
@@ -31,14 +31,13 @@
     }
 
     .content {
-      padding-top: 130px; /* Push below fixed header */
-      width: 980px;
-      margin: 0 auto;
+      padding-top: 160px; /* Aumentado para que el título no quede oculto */
+      display: flex;
+      justify-content: center;
     }
 
     table {
-      width: 70%;
-      margin: 0 auto;
+      width: 600px; /* Ancho fijo para mejor control visual */
       border-collapse: collapse;
     }
 
@@ -56,18 +55,18 @@
 
     td p {
       margin: 0;
-      line-height: 2.4; /* Matches original scroll spacing */
+      line-height: 2.4;
     }
 
     .label {
       text-align: right;
       white-space: nowrap;
-      width: 30%;
+      width: 40%;
     }
 
     .value {
       text-align: left;
-      width: 70%;
+      width: 60%;
     }
   </style>
 </head>
