--- a/consultaTC.html
+++ b/consultaTC.html
@@ -31,21 +31,21 @@
     }
 
     .content {
-      padding-top: 160px; /* Aumentado para que el título no quede oculto */
+      padding-top: 160px;
       display: flex;
       justify-content: center;
     }
 
     table {
-      width: 600px; /* Ancho fijo para mejor control visual */
+      width: 600px;
       border-collapse: collapse;
     }
 
     th {
-      font-size: 1.2em;
+      font-size: 2.2em;
       font-weight: bold;
       text-align: center;
-      padding-bottom: 10px;
+      padding-bottom: 20px;
     }
 
     td {
@@ -67,6 +67,10 @@
     .value {
       text-align: left;
       width: 60%;
+    }
+
+    tbody tr:first-child td {
+      padding-top: 10px;
     }
   </style>
 </head>
