--- a/consultaTC.html
+++ b/consultaTC.html
@@ -79,10 +79,10 @@
     <div class="banner-container">
       <img src="images/bannerVerificaTC.gif" alt="Secretaría de Hacienda" width="567" height="88">
       <div class="divider">
-        <img src="images/DivisionBlanco.png" alt="División Blanco" width="567" height="1">
+        <img src="images/DivisionBlanco.png" alt="División Blanco" width="1" height="1">
       </div>
       <div class="divider">
-        <img src="images/DivisionColor.png" alt="División Color" width="567" height="1">
+        <img src="images/DivisionColor.png" alt="División Color" width=".2" height="1">
       </div>
     </div>
   </div>
