--- a/consultaTC.html
+++ b/consultaTC.html
@@ -72,6 +72,15 @@
     tbody tr:first-child td {
       padding-top: 10px;
     }
+
+    .footer {
+      text-align: center;
+      color: blue;
+      cursor: default;
+      margin: 40px 0;
+      font-size: 10px;
+      font-family: 'Roboto', sans-serif;
+    }
   </style>
 </head>
 <body>
@@ -82,7 +91,7 @@
         <img src="images/DivisionBlanco.png" alt="División Blanco" width="1" height="1">
       </div>
       <div class="divider">
-        <img src="images/DivisionColor.png" alt="División Color" width=".2" height="1">
+        <img src="images/DivisionColor.png" alt="División Color" width="1" height="1">
       </div>
     </div>
   </div>
@@ -108,6 +117,10 @@
         <tr><td class="label"><p>VIGENCIA:</p></td><td class="value"><p>2024</p></td></tr>
       </tbody>
     </table>
+  </div>
+
+  <div class="footer">
+    Verificación de Tarjeta de Circulación Versión: 1.0.0.0 2002204.1620
   </div>
 </body>
 </html>
