--- a/consultaTC.html
+++ b/consultaTC.html
@@ -79,7 +79,7 @@
       bottom: 0;
       left: 0;
       width: 100%;
-      height: 20px; /* Match original footer height */
+      height: 30px; /* Increased from 20px to prevent clipping */
       border: none;
       z-index: 1000;
     }
